infra/api_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: f1-telemetry-api
  namespace: f1-telemetry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: f1-telemetry-api
  template:
    metadata:
      labels:
        app: f1-telemetry-api
    spec:
      containers:
      - name: api
        image: ghcr.io/phish3y/f1-telemetry-api:49b332f995360cb6fe1d5c71c362cdec11a24fd3
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: f1-telemetry-api
  namespace: f1-telemetry
spec:
  type: ClusterIP
  selector:
    app: f1-telemetry-api
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
