infra/producer_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: f1-telemetry-producer
  namespace: f1-telemetry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: f1-telemetry-producer
  template:
    metadata:
      labels:
        app: f1-telemetry-producer
    spec:
      containers:
      - name: producer
        image: ghcr.io/phish3y/f1-telemetry-producer:49b332f995360cb6fe1d5c71c362cdec11a24fd3
        imagePullPolicy: Always
        ports:
        - name: udp
          containerPort: 20777
          protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: f1-telemetry-producer
  namespace: f1-telemetry
spec:
  type: LoadBalancer
  selector:
    app: f1-telemetry-producer
  ports:
  - name: udp
    port: 20777
    targetPort: 20777
    protocol: UDP
